# tooling-trusted-release

./: .asf.yaml  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-light.yaml  .stylelintrc.json  Alpha-signup.md  Dockerfile.alpine  Dockerfile.ubuntu  Makefile  NOTICE  README.md  alembic.ini  eslint.config.mjs  package.json  poetry.toml  pyproject.toml  start-atr.sh  tsconfig.json
.github/workflows/: analyze.yml  build.yml
asfquart/: pyproject.toml
atr/: __init__.py  analysis.py  apache.py  archives.py  committer.py  config.py  constants.py  construct.py  filters.py  form.py  forms.py  htm.py  jwtoken.py  ldap.py  log.py  mail.py  manager.py  mapping.py  metadata.py  models.py  preload.py  principal.py  registry.py  results.py  revision.py  route.py  routes.py  sbomtool.py  schema.py  server.py  ssh.py  tabulate.py  tarzip.py  template.py  user.py  util.py  validate.py  verify.py  version.py  web.py  (+1 more)
atr/admin/: __init__.py
atr/api/: __init__.py
atr/blueprints/: __init__.py  admin.py  api.py  get.py  icons.py  post.py
atr/bps/: __init__.py
atr/datasources/: apache.py
atr/db/: __init__.py  interaction.py  models.py  service.py
atr/docs/: adding-checks.md  build-processes.html  build-processes.md  code-conventions.html  code-conventions.md  contribution-guide.html  contribution-guide.md  database.html  database.md  developer-guide.html  developer-guide.md  how-to-contribute.html  how-to-contribute.md  index.html  index.md  introduction-to-atr.html  introduction-to-atr.md  overview-of-the-code.html  overview-of-the-code.md  running-and-creating-tests.html  running-and-creating-tests.md  running-the-server.html  running-the-server.md  storage-interface.html  storage-interface.md  tasks.html  tasks.md  user-guide.html  user-guide.md  user-interface.html  user-interface.md
atr/get/: __init__.py  announce.py  candidate.py  committees.py  compose.py  distribution.py  docs.py  download.py  draft.py  example_test.py  file.py  finish.py  ignores.py  keys.py  manual.py  preview.py  projects.py  published.py  ref.py  release.py  report.py  resolve.py  revisions.py  root.py  sbom.py  start.py  test.py  tokens.py  upload.py  user.py  vote.py  voting.py
atr/manual/: contribution.html  contribution.md  index.html  index.md
atr/models/: __init__.py  api.py  basic.py  distribution.py  helpers.py  policy.py  results.py  schema.py  sql.py  tabulate.py
atr/policy/: Makefile  README.md  third-party-licenses.html  third-party-licenses.json  third-party-licenses.md
atr/post/: __init__.py  announce.py  candidate.py  distribution.py  draft.py  example_test.py  finish.py  ignores.py  keys.py  manual.py  preview.py  projects.py  resolve.py  revisions.py  sbom.py  start.py  test.py  tokens.py  upload.py  user.py  vote.py  voting.py
atr/routes/: __init__.py  announce.py  candidate.py  candidate_draft.py  committees.py  compose.py  dev.py  distribute.py  distribution.py  docs.py  download.py  draft.py  file.py  files.py  finish.py  ignores.py  keys.py  manual.py  mapping.py  modules.py  package.py  preview.py  project.py  projects.py  published.py  ref.py  release.py  report.py  resolve.py  revisions.py  root.py  sbom.py  start.py  tokens.py  upload.py  user.py  vote.py  vote_policy.py  voting.py
atr/sbom/: __init__.py  __main__.py  cli.py  conformance.py  cyclonedx.py  licenses.py  maven.py  osv.py  sbomqs.py  spdx.py  utilities.py
atr/shared/: __init__.py  announce.py  distribution.py  draft.py  finish.py  ignores.py  keys.py  manual.py  projects.py  resolve.py  revisions.py  sbom.py  start.py  test.py  tokens.py  upload.py  user.py  vote.py  voting.py
atr/static/: README.txt  root.css
atr/storage/: __init__.py  outcome.py  types.py
atr/svn/: __init__.py  pubsub.py
atr/tasks/: __init__.py  archive.py  bulk.py  hashing.py  keys.py  license.py  mailtest.py  message.py  metadata.py  rat.py  rsync.py  sbom.py  signature.py  svn.py  task.py  vote.py
atr/templates/: about.html  add-release-candidate.html  announce-selected.html  blank.html  candidate-attach.html  candidate-create.html  candidate-draft-add-project.html  candidate-draft-add.html  candidate-draft-check.html  candidate-draft-list.html  candidate-draft-modify.html  candidate-draft-promote.html  candidate-draft-tools.html  candidate-resolve-release.html  candidate-resolve.html  candidate-review.html  candidate-signature-verify.html  candidate-vote-project.html  candidate-vote.html  check-selected-candidate-forms.html  check-selected-path-table.html  check-selected-release-info.html  check-selected-vote-email.html  check-selected.html  committee-directory.html  committee-view.html  compose-release.html  compose-selected.html  data-browser.html  delete-committee-keys.html  dev-send-email.html  docs-verify.html  download-all.html  draft-add-files.html  draft-add-project.html  draft-add.html  draft-check.html  draft-content.html  draft-directory.html  draft-evaluate-path.html  (+88 more)
bootstrap/: custom.scss  make.sh  reboot-shim.scss
client/: atr
docs/: api-security.html  conventions.html  conventions.md  development.html  development.md  plan.html  plan.md  storage-interface.html  storage-interface.md  test-user-flows.html  test-user-flows.md
licenses/: LICENSE-Jost.txt
migrations/: env.py  script.py.mako
notes/: api-security.md  development.html  outcome-design-patterns.html  outcome-design-patterns.md  plan.html  plan.md  trivial-changes.md
patches/: generics.py.patch  gnupg.py.patch
playwright/: 0924BA4B875A1A472D147C1EB11EB02801756B9E.asc  68FF2E20F02B070D73D416188DE8CC167FE2663A.asc  E35604DD9E2892E5465B3D8A203F105A7B33A64F.asc  mk.sh  test.py
scripts/: README.md  build  check_user.py  cyclonedx_parse.py  docs_build.py  docs_check.py  docs_post_process.py  extract_spdx_identifiers.py  generate-certificates  github_tag_dates.py  integrity_check.py  interface_order.py  interface_privacy.py  keys_import.py  markup_strings.py  release_path_parse.py  run  stop  vote_initiate_convert.py
tests/: Dockerfile.playwright  docker-compose.yml  run-tests.sh  test_apache.py
(+208 files in other folders)
